# ytdlp2STRM

./: .dockerignore  .gitignore  Dockerfile  README.md  cli.py  docker-compose.yml  entrypoint.sh  main.py  pyproject.toml  requierments.txt  version.py
clases/cron/: cron.py
clases/folders/: folders.py
clases/jellyfin_notifier/: jellyfin_notifier.py
clases/log/: log.py
classes/config/: config.py
classes/cron/: cron.py
classes/folders/: folders.py
classes/jellyfin_notifier/: jellyfin_notifier.py
classes/nfo/: nfo.py
classes/worker/: worker.py
config/: config.example.json  crons.example.json  plugins.py  routes.py
plugins/youtube/: channel_list.example.json  config.example.json  routes.py  youtube.py
scripts/: convert_vtt_to_srt.py  download_last_subtitles.py  fix_all_subtitles_alignment.py  sync_subtitle_sidecars.py
ui/: routes.py  ui.py
ui/html/: crons.html  general_settings.html  index.html  log.html  plugin_channels.html  plugin_settings.html
ui/static/: bs-theme-mode.js  cli.js
utils/: episode_numbering.py  validate_id.py
